--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.1.0",
+    "gatsby-plugin-podcast-feed": "^0.1.0",
+    "gatsby-plugin-podcast-rss-feed": "^0.1.5",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-remark-copy-linked-files": "^3.1.0",
